<resources>
    <string name="app_name">MyMovies</string>
    <string name="poster_of_move">Постер к фильму</string>
    <string name="text_top_rate">Наиболее рейтинговые</string>
    <string name="text_popularity">Самые популярные</string>
    <string name="label_title">Название:</string>
    <string name="label_original_title">Оригинальное название:</string>
    <string name="label_rating">Рейтинг:</string>
    <string name="label_data_release">Дата релиза:</string>
    <string name="desc_poster">Постер фильма</string>
    <string name="key_id">id</string>
    <string name="add_to_favorite">Фильм добавлен в избранное</string>
    <string name="delete_from_favorite">Фильм удален из избранного</string>
    <string name="item_main">Главная</string>
    <string name="item_favorite">Избранное</string>
    <string name="launch_trailer">Запустить трейлер</string>
</resources>